Fixed too large icon size in very small mobile device -- Version-1.38

--- a/responsive.css
+++ b/responsive.css
@@ -117,4 +117,7 @@
         font-size: 0.8rem;
     }
 
+    .gameCard {
+        font-size: 3.0rem;
+    }
 }
